--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
         run: go build -v ./...
 
       - name: Run
-        run: ./bing-wallpaper -f ./ -s ./wallpaper/
+        run: ./bing-wallpaper -f ./db.json
 
       - name: Commit files
         run: |
